src/css/style.css
* {
  box-sizing: border-box;
}
*:hover {
  cursor: url('../assets/images/ui/cursor.png'), auto !important;
}
body {
  margin: 0;
  cursor: url('../assets/images/ui/cursor.png'), auto;
  /* font-family: Arial, Helvetica, sans-serif; */
}
p {
  font-size: 1.2rem
}
video {
  object-fit: cover;
  height: 100vh;
  width: 100%;
  position: fixed;
  top: 0;
  left: 0;
}
.wrapper {
  min-height: 100vh;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}
.banners {
  background-image: url('../assets/images/ui/background.png');
}
.wrapper.banners > .heading {
  height: 15vh;
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.wrapper.banners > .heading > .current-banner {
  color: #d4bc8f;
  font-size: 1.5rem;
  text-shadow: 3px 2px 2px rgb(50, 50, 50);
  width: 200px;
  margin-left: 1.2rem;
  text-align: center;
}
.wrapper.banners > .heading > .close-window, .close-button {
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  background-image: url('../assets/images/ui/closing-button.png');
  height: 40px;
  width: 40px;
  margin-right: 1.2rem;
}
.close-button {
  margin: 0;
}
.wrapper.banners > .heading > .close-window:hover {
  cursor: url('../assets/images/ui/cursor.png'), auto;
}
.wrapper.banners > .heading > .select-banner {
  display: flex;
  justify-content: space-around;
}
.banner-button {
  height: 90px;
  width: 180px;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  margin: 0 1.2rem;
  transition-duration: 500ms;
}
.banner-button:hover {
  cursor: url('../assets/images/ui/cursor.png'), auto;
}
.banner-button.beginners-wish {
  background-image: url('../assets/images/ui/noelle.png');
}
.banner-button.beginners-wish.selected {
  background-image: url('../assets/images/ui/noelle-selected.png');
}
.banner-button.ballad-in-goblets {
  background-image: url('../assets/images/ui/venti.png');
}
.banner-button.ballad-in-goblets.selected {
  background-image: url('../assets/images/ui/venti-selected.png');
}
.banner-button.farewell-of-snezhnaya {
  background-image: url('../assets/images/ui/childe.png');
}
.banner-button.farewell-of-snezhnaya.selected {
  background-image: url('../assets/images/ui/childe-selected.png');
}
.banner-button.epitome-invocation {
  background-image: url('../assets/images/ui/weapon.png');
}
.banner-button.epitome-invocation.selected {
  background-image: url('../assets/images/ui/weapon-selected.png');
}
.banner-button.wanderlust-invocation {
  background-image: url('../assets/images/ui/wanderlust.png');
}
.banner-button.wanderlust-invocation.selected{
  background-image: url('../assets/images/ui/wanderlust-selected.png');
}
.carousel-container {
  position: relative;
  height: 65vh;
  margin: 2rem 15rem;
}
.carousel.carousel-slider {
  display: flex;
}
.carousel {
  height: 100%;
}
.carousel-image {
  max-width: 100%;
  max-height: 100%;
}
.action-container {
  height: 10vh;
  display: flex;
  justify-content: space-around;
}
.button-container > button {
  margin: auto 5px;
}
.button-container {
  display: flex;
  justify-content: center;
  align-items: center;
}
button {
  border: none;
  outline: none;
  border-radius: 12px;
  border: 1px solid black;
  padding: 5px 25px;
  background-color: rgb(221, 221, 221);
  color: black;
  transition: color 250ms ease-in;
}
button:hover {
  cursor: url('../assets/images/ui/cursor.png'), auto;
  background-color: rgb(230, 227, 227);
}
.skip-button {
  position: absolute;
  top: 7px;
  right: 5px;
  z-index: 10;
  opacity: 0.4;
  transition: opacity 500ms;
}
.skip-button:hover {
  opacity: 1;
}
.wish-button {
  background-size: contain;
  background-position: center;
  background-repeat: no-repeat;
  background-image: url('../assets/images/ui/wish-button.png');
  color: #d4bc8f;
  height: 100%;
  width:  240px;
  display: flex;
  align-items: center;
  justify-content: center;
}
.wish-button:hover {
  cursor: url('../assets/images/ui/cursor.png'), auto;
  color: gold;
}

.details {
  background-color: #ebebeb;
}

.react-stars-container > div {
  justify-content: center;
}

.details-box {
  height: 120px;
  width: 340px;
  background-size: contain;
  background-position: center;
  background-repeat: no-repeat;
}

.details-box > div > div:last-child > hr {
  border-top: 2px solid white;
}

.teal {
  color: #359697;
}
.aqua {
  color: #25c0f5;
}
.blue {
  color: #4682b4;
}
.purple {
  color: #9763c4;
}
.orange {
  color: #ec4923;
}
.brass {
  color: #a38052;
}
.gold {
  color: #c8a079;
}
.dark-gray-bg {
  background-color: #dbdbdb;
}
table {
  text-align: center;
}
table, th, td {
  border: 2px solid #d0cfcd;
}
th {
  background-color: #dbd7d3;
}
td {
  color: #a7865a;
  text-transform: capitalize;
}

.navbar {
  position: fixed;
  top: 0;
  height: 50px;
  background-color: #111315;
  width: 100%;
  z-index: 2;
}
.navbar > svg {
  color: #5b5c5d;
  font-size: 1.2rem;
}
.navbar > svg:hover {
  cursor: url('../assets/images/ui/cursor.png'), auto;
  color: goldenrod;
}
.wish-results {
  background-image: url('../assets/images/ui/wish-details-background.jpg');
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
}
.new-badge {
  position: absolute;
  top: -7px;
  right: -4px;
  color: white;
  padding: 1px 2px;
  border-radius: 6px;
  font-size: .8rem;
  background-color: darkgoldenrod;
  opacity: 0.9;
}
.wish-item {
  position: relative;
  background-position: center;
  background-repeat: no-repeat;
  background-color: rgba(50, 50, 50, 0.9);
  border-radius: 15px;
  height: 40vh;
  color: white;
  font-size: .9rem;
  text-shadow: 3px 2px 2px rgb(29, 29, 29);
}
.wish-item.character {
  background-size: cover;
}
.wish-item.weapon {
  background-size: contain;
}
.amount-spent-badge {
  display: block;
  width: 100%;
  height: calc(1.5em + .75rem + 2px);
  padding: .375rem .75rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  color: #495057;
  background-clip: padding-box;
  border: 1px solid #ced4da;
  border-radius: .25rem;
}
.icon-item {
  background-position: center;
  background-size: contain;
  background-repeat: no-repeat;
  max-width: 340px !important;
  color: white;
  font-size: .8rem;
}
.modal-container {
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  background-color: rgba(50, 50, 50, 0.7);
  z-index: 10;
  display: flex;
  justify-content: center;
  align-items: center;
}
.disclaimer-modal-content {
  background-color: #ebebeb;
  text-align: center;
  position: relative;
}
.disclaimer-modal-content > .close-button {
  position: absolute;
  top: 2px;
  right: 5px;
}
.disclaimer-modal-content > p {
  font-size: 1rem;
  margin: .2rem;
}
.vh-90 {
  height: 90vh !important;
}
.vh-10 {
  height: 10vh !important;
}
.mw-50 {
  max-width: 50% !important;
}

/* 4K screen in Chrome DevTools. */
@media (max-width: 3840px) and (min-width: 2550px) {
  .carousel-container {
    width: 50vw;
    min-height: 75vh;
    margin: 0 auto;
  }
}

@media (max-width: 2549px) and (min-width: 2030px) {
  .carousel-container {
    width: 60vw;
    min-height: 75vh;
    margin: 0 auto;
  }
}

/* To get a better resolution in a smaller screen (1440px) */
@media (max-width: 2029px) and (min-width: 1441px) {
  .carousel-container {
    width: 65vw;
    min-height: 75vh;
    margin: 0 auto;
  }
}

@media (max-width: 1200px) {
  .banner-button {
    height: 81px;
    width: 162px;
  }
  .carousel-container {
    margin: 2rem;
  }
}
@media (max-width: 992px) {
  .banner-button {
    height: 61px;
    width: 128px;
  }
  .wrapper.banners > .heading > .close-window {
    height: 35px;
    width: 35px;
  }

}
@media (max-width: 768px) {
  .wrapper.banners > .heading > .select-banner {
    margin-top: 1.2rem;
    flex-wrap: wrap;
  }
  .wrapper.banners > .heading > .close-window {
    display: none;
  }
  .wish-button {
    width:  150px;
  }
}
@media (max-width: 576px) {
  .banner-button {
    height: 50px;
    width: 100px;
  }
  .wrapper.banners > .heading > .current-banner {
    font-size: 1rem;
    width: 100px;
    margin-left: 1.2rem;
    text-align: center;
  }
  .wish-container {
    flex-direction: column;
    margin-bottom: 1rem;
  }
  .wish-button {
    width:  123px;
  }
}

